--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -8,9 +8,9 @@
 <% @tweets.each do |tweet| %>
     <%= tweet.message %>
     <% if session[:login_uid] %>
-        <%= link_to '削除', tweet_path(tweet), method: :delete %>
-        <%= link_to 'いいね削除', likes_path(params: { tweet_id: tweet.id, login_uid: session[:uid] }), data: { "turbo-method": :delete } %>
+        <%= link_to '削除', tweet_path(tweet), data: { turbo_method: :delete } %>
         <%= link_to 'いいね', likes_path(params: { tweet_id: tweet.id, login_uid: session[:uid] }), data: { "turbo-method": :post } %>
+        <%= link_to 'いいね削除', likes_path(params: { tweet_id: tweet.id, login_uid: session[:uid] }), data: { "turbo-method": :delete } %>
     <% end %>
     <br>
 <% end %>
