--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>ユーザー</h1>
-<% if session[:login_uid] %>
+<% if current_user %>
     <%= link_to 'ログアウト', top_logout_path %><br>
 <% else %>
     <%= link_to 'ログイン', top_main_path %><br>
