--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,9 @@
 <%= form_with(model: @user, local: true) do |f| %>
   <%= f.label :uid, 'ユーザーID' %>
   <%= f.text_field :uid %><br>
-  <%= f.label :pass, 'パスワード' %>
-  <%= f.password_field :pass %><br>
+  <%= f.label :password, 'パスワード' %>
+  <%= f.password_field :password %><br>
+  <%= f.label :password_confirmation, 'パスワード(確認)' %><br>
+  <%= f.password_field :password_confirmation %>
   <%= f.submit '登録' %>
 <% end %>
